refactor: order entity and repository